<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tools.soaring.igcuploader.IgcUploadActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/text_flightdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_flightdetails"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/flight_glider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/glider_name"
                android:inputType="text|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/glider_brand_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:entries="@array/glider_brands" />

        <Spinner
            android:id="@+id/glider_cert_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:entries="@array/glider_certs" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/linearLayout2">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/upload_box_xcontest"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="false"
                    android:text="@string/upload_box_xcontest"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="0dp" />

                <CheckBox
                    android:id="@+id/upload_box_leo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/upload_box_leo" />

            </LinearLayout>

            <Button
                android:id="@+id/upload_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onUploadButtonPressed"
                android:text="@string/button_upload"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="414dp" />

        </LinearLayout>

        <WebView
            android:id="@+id/info_uploadresponse"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
